new build command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tina": "tinacms dev -c \"yarn start\" ",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "tinacms build && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
